# primer-parcial-cabral-caceres-paschini

./: CMakeLists.txt  README.md  main.cpp  raylibTemplate.data  raylibTemplate.js  raylibTemplate.js.orig.js  raylibTemplate.wasm
clases/: Menu.cpp  Menu.h
clases/Animator/: Animation.cpp  Animation.h  Animation_Creator.cpp  Animation_Creator.h  Image_Holder.cpp  Image_Holder.h
clases/Character/: Character.cpp  Character.h
clases/Colision/: Collision.cpp  Collision.h
clases/Decorator/: Player_Decorator.cpp  Player_Decorator.h
clases/Ending/: Ending.cpp  Ending.h
clases/Enemies/: Enemies.cpp  Enemies.h  Enemies_factory.cpp  Enemies_factory.h
clases/Enemies/Fat_Bird/: Fat_Bird.cpp  Fat_Bird.h
clases/Enemies/Plant/: Plant.cpp  Plant.h
clases/Enemies/Slime/: Slime.cpp  Slime.h
clases/Enemies/Turtle/: Turtle.cpp  Turtle.h
clases/Enemy/: Enemy.cpp  Enemy.h
clases/Entity/: All_entity.cpp  All_entity.h  Entity.cpp  Entity.h  entity.cpp  entity.h
clases/Fin/: fin.h
clases/Fondo/: Background.cpp  Background.h  Map.cpp  Map.h
clases/Fruits/: Fruit_Vector.cpp  Fruit_Vector.h  Fruits.cpp  Fruits.h
clases/GUI/: GUI.cpp  GUI.h
clases/Game/: Game.cpp  Game.h  State.cpp  State.h
clases/Ganar/: ganar.h
clases/Input/: Input_Handler.cpp  Input_Handler.h
clases/Map/: Map.cpp  Map.h
clases/Menu/: Menu.cpp  Menu.h
clases/Music Renderer/: Sound_Render.cpp  Sound_Render.h
clases/Padre/: padre.h
clases/Personaje/: Enemigo.cpp  Enemigo.h  Fruta.cpp  Fruta.h  Player.cpp  Player.h
clases/Power_Ups/: Power_Ups.cpp  Power_Ups.h
clases/Power_Ups/Powers/: Power_A.cpp  Power_A.h  Power_B.cpp  Power_B.h  Power_C.cpp  Power_C.h  Power_D.cpp  Power_D.h  Power_E.cpp  Power_E.h
clases/Renderer/: Renderer.cpp  Renderer.h
clases/State/: Context.cpp  Context.h  Handle.cpp  Handle.h  State.cpp  State.h
clases/World/: World.cpp  World.h
libs/: tileson.hpp
resources/: aNivel2.tmx
resources/level/: INTENTO2.json  Level2.json  Map.json  Map1.json  aNivel3.json
